--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,7 @@
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-readme-md": "^1.2.0",
     "tailwindcss": "^3.3.2",
     "url": "^0.11.0"
   },
