--- a/website/package.json
+++ b/website/package.json
@@ -22,13 +22,13 @@
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "docusaurus-preset-openapi": "^0.6.4",
+    "marked": "^9.1.5",
     "postcss": "^8.4.24",
     "posthog-docusaurus": "^2.0.0",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-github-readme-md": "^1.2.0",
     "tailwindcss": "^3.3.2",
     "url": "^0.11.0"
   },
